chore: update project configuration and enhance logging across various services
- Updated `pom.xml` for dependency management.
- Enhanced logging in multiple services and repositories to improve traceability and debugging capabilities.
- Adjusted application configuration files for better environment management.