@@ -1,4 +1,6 @@
 package com.atparui.rmsservice.service;
+import java.util.List;
+import java.util.Optional;
 
 import com.atparui.rmsservice.config.Constants;
 import com.atparui.rmsservice.domain.Authority;
@@ -6,7 +8,6 @@ import com.atparui.rmsservice.domain.User;
 import com.atparui.rmsservice.repository.AuthorityRepository;
 import com.atparui.rmsservice.repository.UserRepository;
 import com.atparui.rmsservice.repository.UserRepositoryInternal;
-import com.atparui.rmsservice.repository.search.UserSearchRepository;
 import com.atparui.rmsservice.security.SecurityUtils;
 import com.atparui.rmsservice.service.dto.AdminUserDTO;
 import com.atparui.rmsservice.service.dto.UserDTO;
@@ -15,6 +16,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
@@ -22,8 +24,6 @@ import org.springframework.security.oauth2.client.authentication.OAuth2Authentic
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
 
 /**
  * Service class for managing users.
@@ -34,14 +34,10 @@ public class UserService {
     private static final Logger LOG = LoggerFactory.getLogger(UserService.class);
 
     private final UserRepository userRepository;
-
-    private final UserSearchRepository userSearchRepository;
-
     private final AuthorityRepository authorityRepository;
 
-    public UserService(UserRepository userRepository, UserSearchRepository userSearchRepository, AuthorityRepository authorityRepository) {
+    public UserService(UserRepository userRepository, AuthorityRepository authorityRepository) {
         this.userRepository = userRepository;
-        this.userSearchRepository = userSearchRepository;
         this.authorityRepository = authorityRepository;
     }
 
@@ -53,13 +49,12 @@ public class UserService {
      * @param email     email id of user.
      * @param langKey   language key.
      * @param imageUrl  image URL of user.
-     * @return a completed {@link Mono}.
      */
     @Transactional
-    public Mono<Void> updateUser(String firstName, String lastName, String email, String langKey, String imageUrl) {
-        return SecurityUtils.getCurrentUserLogin()
+    public void updateUser(String firstName, String lastName, String email, String langKey, String imageUrl) {
+        SecurityUtils.getCurrentUserLogin()
             .flatMap(userRepository::findOneByLogin)
-            .flatMap(user -> {
+            .ifPresent(user -> {
                 user.setFirstName(firstName);
                 user.setLastName(lastName);
                 if (email != null) {
@@ -67,62 +62,60 @@ public class UserService {
                 }
                 user.setLangKey(langKey);
                 user.setImageUrl(imageUrl);
-                return saveUser(user);
-            })
-            .flatMap(user -> userSearchRepository.save(user).thenReturn(user))
-            .doOnNext(user -> LOG.debug("Changed Information for User: {}", user))
-            .then();
+                userRepository.save(user);
+                LOG.debug("Changed Information for User: {}", user);
+            });
     }
 
     @Transactional
-    public Mono<User> saveUser(User user) {
+    public User saveUser(User user) {
         return saveUser(user, false);
     }
 
     @Transactional
-    public Mono<User> saveUser(User user, boolean forceCreate) {
-        return SecurityUtils.getCurrentUserLogin()
-            .switchIfEmpty(Mono.just(Constants.SYSTEM))
-            .flatMap(login -> {
-                if (user.getCreatedBy() == null) {
-                    user.setCreatedBy(login);
-                }
-                user.setLastModifiedBy(login);
-                // Saving the relationship can be done in an entity callback
-                // once https://github.com/spring-projects/spring-data-r2dbc/issues/215 is done
-                Mono<User> persistedUser;
-                if (forceCreate) {
-                    persistedUser = userRepository.create(user);
-                } else {
-                    persistedUser = userRepository.save(user);
-                }
-                return persistedUser.flatMap(savedUser ->
-                    Flux.fromIterable(user.getAuthorities())
-                        .flatMap(authority ->
-                            ((UserRepositoryInternal) userRepository).saveUserAuthority(savedUser.getId(), authority.getName())
-                        )
-                        .then(Mono.just(savedUser))
-                );
-            });
+    public User saveUser(User user, boolean forceCreate) {
+        String login = SecurityUtils.getCurrentUserLogin().orElse(Constants.SYSTEM);
+        
+        if (user.getCreatedBy() == null) {
+            user.setCreatedBy(login);
+        }
+        user.setLastModifiedBy(login);
+        
+        // Save user
+        User savedUser;
+        if (forceCreate) {
+            savedUser = ((UserRepositoryInternal) userRepository).create(user);
+        } else {
+            savedUser = userRepository.save(user);
+        }
+        
+        // Save user authorities
+        for (Authority authority : user.getAuthorities()) {
+            ((UserRepositoryInternal) userRepository).saveUserAuthority(savedUser.getId(), authority.getName());
+        }
+        
+        return savedUser;
     }
 
     @Transactional(readOnly = true)
-    public Flux<AdminUserDTO> getAllManagedUsers(Pageable pageable) {
-        return userRepository.findAllWithAuthorities(pageable).map(AdminUserDTO::new);
+    public List<AdminUserDTO> getAllManagedUsers(Pageable pageable) {
+        Page<User> users = userRepository.findAllWithAuthorities(pageable);
+        return users.stream().map(AdminUserDTO::new).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public Flux<UserDTO> getAllPublicUsers(Pageable pageable) {
-        return userRepository.findAllByIdNotNullAndActivatedIsTrue(pageable).map(UserDTO::new);
+    public List<UserDTO> getAllPublicUsers(Pageable pageable) {
+        Page<User> users = userRepository.findAllByIdNotNullAndActivatedIsTrue(pageable);
+        return users.stream().map(UserDTO::new).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public Mono<Long> countManagedUsers() {
+    public long countManagedUsers() {
         return userRepository.count();
     }
 
     @Transactional(readOnly = true)
-    public Mono<User> getUserWithAuthoritiesByLogin(String login) {
+    public Optional<User> getUserWithAuthoritiesByLogin(String login) {
         return userRepository.findOneWithAuthoritiesByLogin(login);
     }
 
@@ -131,53 +124,62 @@ public class UserService {
      * @return a list of all the authorities.
      */
     @Transactional(readOnly = true)
-    public Flux<String> getAuthorities() {
-        return authorityRepository.findAll().map(Authority::getName);
+    public List<String> getAuthorities() {
+        return authorityRepository.findAll().stream()
+            .map(Authority::getName)
+            .collect(Collectors.toList());
     }
 
-    private Mono<User> syncUserWithIdP(Map<String, Object> details, User user) {
+    private User syncUserWithIdP(Map<String, Object> details, User user) {
         // save authorities in to sync user roles/groups between IdP and JHipster's local database
-        Collection<String> userAuthorities = user.getAuthorities().stream().map(Authority::getName).toList();
+        Collection<String> userAuthorities = user.getAuthorities().stream()
+            .map(Authority::getName)
+            .collect(Collectors.toList());
 
-        return getAuthorities()
-            .collectList()
-            .flatMapMany(dbAuthorities -> {
-                List<Authority> authoritiesToSave = userAuthorities
-                    .stream()
-                    .filter(authority -> !dbAuthorities.contains(authority))
-                    .map(authority -> {
-                        Authority authorityToSave = new Authority();
-                        authorityToSave.setName(authority);
-                        return authorityToSave;
-                    })
-                    .toList();
-                return Flux.fromIterable(authoritiesToSave);
+        List<String> dbAuthorities = getAuthorities();
+        List<Authority> authoritiesToSave = userAuthorities
+            .stream()
+            .filter(authority -> !dbAuthorities.contains(authority))
+            .map(authority -> {
+                Authority authorityToSave = new Authority();
+                authorityToSave.setName(authority);
+                return authorityToSave;
             })
-            .doOnNext(authority -> LOG.debug("Saving authority '{}' in local database", authority))
-            .flatMap(authorityRepository::save)
-            .then(userRepository.findOneByLogin(user.getLogin()))
-            .switchIfEmpty(saveUser(user, true))
-            .flatMap(existingUser -> {
-                // if IdP sends last updated information, use it to determine if an update should happen
-                if (details.get("updated_at") != null) {
-                    Instant dbModifiedDate = existingUser.getLastModifiedDate();
-                    Instant idpModifiedDate;
-                    if (details.get("updated_at") instanceof Instant) {
-                        idpModifiedDate = (Instant) details.get("updated_at");
-                    } else {
-                        idpModifiedDate = Instant.ofEpochSecond((Integer) details.get("updated_at"));
-                    }
-                    if (idpModifiedDate.isAfter(dbModifiedDate)) {
-                        LOG.debug("Updating user '{}' in local database", user.getLogin());
-                        return updateUser(user.getFirstName(), user.getLastName(), user.getEmail(), user.getLangKey(), user.getImageUrl());
-                    }
-                } else {
-                    LOG.debug("Updating user '{}' in local database", user.getLogin());
-                    return updateUser(user.getFirstName(), user.getLastName(), user.getEmail(), user.getLangKey(), user.getImageUrl());
-                }
-                return Mono.empty();
-            })
-            .thenReturn(user);
+            .collect(Collectors.toList());
+        
+        // Save new authorities
+        for (Authority authority : authoritiesToSave) {
+            LOG.debug("Saving authority '{}' in local database", authority);
+            authorityRepository.save(authority);
+        }
+
+        // Find or create user
+        Optional<User> existingUserOpt = userRepository.findOneByLogin(user.getLogin());
+        if (existingUserOpt.isEmpty()) {
+            return saveUser(user, true);
+        }
+        
+        User existingUser = existingUserOpt.get();
+        
+        // if IdP sends last updated information, use it to determine if an update should happen
+        if (details.get("updated_at") != null) {
+            Instant dbModifiedDate = existingUser.getLastModifiedDate();
+            Instant idpModifiedDate;
+            if (details.get("updated_at") instanceof Instant) {
+                idpModifiedDate = (Instant) details.get("updated_at");
+            } else {
+                idpModifiedDate = Instant.ofEpochSecond((Integer) details.get("updated_at"));
+            }
+            if (idpModifiedDate.isAfter(dbModifiedDate)) {
+                LOG.debug("Updating user '{}' in local database", user.getLogin());
+                updateUser(user.getFirstName(), user.getLastName(), user.getEmail(), user.getLangKey(), user.getImageUrl());
+            }
+        } else {
+            LOG.debug("Updating user '{}' in local database", user.getLogin());
+            updateUser(user.getFirstName(), user.getLastName(), user.getEmail(), user.getLangKey(), user.getImageUrl());
+        }
+        
+        return user;
     }
 
     /**
@@ -188,7 +190,7 @@ public class UserService {
      * @return the user from the authentication.
      */
     @Transactional
-    public Mono<AdminUserDTO> getUserFromAuthentication(AbstractAuthenticationToken authToken) {
+    public AdminUserDTO getUserFromAuthentication(AbstractAuthenticationToken authToken) {
         Map<String, Object> attributes;
         if (authToken instanceof OAuth2AuthenticationToken) {
             attributes = ((OAuth2AuthenticationToken) authToken).getPrincipal().getAttributes();
@@ -197,6 +199,7 @@ public class UserService {
         } else {
             throw new IllegalArgumentException("AuthenticationToken is not OAuth2 or JWT!");
         }
+        
         User user = getUser(attributes);
         user.setAuthorities(
             authToken
@@ -211,7 +214,8 @@ public class UserService {
                 .collect(Collectors.toSet())
         );
 
-        return syncUserWithIdP(attributes, user).flatMap(u -> Mono.just(new AdminUserDTO(u)));
+        User syncedUser = syncUserWithIdP(attributes, user);
+        return new AdminUserDTO(syncedUser);
     }
 
     private static User getUser(Map<String, Object> details) {
